--- a/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
+++ b/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
@@ -16,6 +16,118 @@
     "Ce répertoire contient les fichiers et solutions pour le TD Règles d'association.  \n",
     "**Fait par : CHICA Miller et TORRES Jonathan**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7e4cdb1",
+   "metadata": {},
+   "source": [
+    "## 1. Implémentation de trois méthodes de *Frequent Itemset Generation*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a9abf83",
+   "metadata": {},
+   "source": [
+    "### 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf7c3b1",
+   "metadata": {},
+   "source": [
+    "### 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5d615f0",
+   "metadata": {},
+   "source": [
+    "### 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0dabeab",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e54a17ba",
+   "metadata": {},
+   "source": [
+    "## 2. Comparaison des implémentations de Section 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e0d2cf0",
+   "metadata": {},
+   "source": [
+    "### 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8db27d3",
+   "metadata": {},
+   "source": [
+    "### 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218d7cf9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "088d74ef",
+   "metadata": {},
+   "source": [
+    "## 3. Comparaison avec les implémentations de *MLxtend* et *Spark MLlib*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07447056",
+   "metadata": {},
+   "source": [
+    "### 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1898698e",
+   "metadata": {},
+   "source": [
+    "### 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f250fff8",
+   "metadata": {},
+   "source": [
+    "### 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15ba5579",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
