--- a/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
+++ b/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
@@ -1053,11 +1053,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1c747117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   support          itemsets\n",
+      "0      0.6            (Beer)\n",
+      "1      0.8           (Bread)\n",
+      "2      0.8         (Diapers)\n",
+      "3      0.8            (Milk)\n",
+      "4      0.6   (Diapers, Beer)\n",
+      "5      0.6  (Bread, Diapers)\n",
+      "6      0.6     (Bread, Milk)\n",
+      "7      0.6   (Diapers, Milk)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from mlxtend.frequent_patterns import apriori\n",
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "\n",
+    "transactions = [\n",
+    "    [\"Bread\", \"Milk\"],\n",
+    "    [\"Bread\", \"Diapers\", \"Beer\", \"Eggs\"],\n",
+    "    [\"Milk\", \"Diapers\", \"Beer\", \"Coke\"],\n",
+    "    [\"Bread\", \"Milk\", \"Diapers\", \"Beer\"],\n",
+    "    [\"Bread\", \"Milk\", \"Diapers\", \"Coke\"]\n",
+    "]\n",
+    "\n",
+    "# Convertir la lista de transacciones en un DataFrame binario\n",
+    "te = TransactionEncoder()\n",
+    "te_ary = te.fit(transactions).transform(transactions)\n",
+    "df = pd.DataFrame(te_ary, columns=te.columns_)\n",
+    "\n",
+    "# Ejecutar Apriori con minsup = 0.6\n",
+    "frequent_itemsets = apriori(df, min_support=0.6, use_colnames=True)\n",
+    "print(frequent_itemsets)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1898698e",
    "metadata": {},
    "source": [
     "### 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0cf3c1eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Using incubator modules: jdk.incubator.vector\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/11/12 16:19:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Frequent itemsets (items | freq) ===\n",
+      "+----------------+----+\n",
+      "|items           |freq|\n",
+      "+----------------+----+\n",
+      "|[Beer]          |3   |\n",
+      "|[Bread]         |4   |\n",
+      "|[Diapers]       |4   |\n",
+      "|[Milk]          |4   |\n",
+      "|[Beer, Diapers] |3   |\n",
+      "|[Diapers, Bread]|3   |\n",
+      "|[Diapers, Milk] |3   |\n",
+      "|[Milk, Bread]   |3   |\n",
+      "+----------------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# spark_fp_growth_bread_milk.py\n",
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.fpm import FPGrowth\n",
+    "\n",
+    "# Crear sesión\n",
+    "spark = SparkSession.builder.appName(\"FP-Growth-BreadMilk\").getOrCreate()\n",
+    "spark.sparkContext.setLogLevel(\"ERROR\")\n",
+    "\n",
+    "# Dataset del enunciado\n",
+    "data = [\n",
+    "    (0, [\"Bread\", \"Milk\"]),\n",
+    "    (1, [\"Bread\", \"Diapers\", \"Beer\", \"Eggs\"]),\n",
+    "    (2, [\"Milk\", \"Diapers\", \"Beer\", \"Coke\"]),\n",
+    "    (3, [\"Bread\", \"Milk\", \"Diapers\", \"Beer\"]),\n",
+    "    (4, [\"Bread\", \"Milk\", \"Diapers\", \"Coke\"]),\n",
+    "]\n",
+    "df = spark.createDataFrame(data, [\"tid\", \"items\"])\n",
+    "\n",
+    "# minsup = 0.6  -> con 5 transacciones => soporte mínimo = 3\n",
+    "fp = FPGrowth(itemsCol=\"items\", minSupport=0.6, minConfidence=0.6)\n",
+    "model = fp.fit(df)\n",
+    "\n",
+    "print(\"\\n=== Frequent itemsets (items | freq) ===\")\n",
+    "# Ordenamos para que sea fácil comparar con el enunciado\n",
+    "(model.freqItemsets\n",
+    "     .orderBy(pyspark.sql.functions.size(\"items\").asc(), \"items\")\n",
+    "     .show(truncate=False))\n",
+    "\n",
+    "# (Opcional) Reglas de asociación (no obligatorio en el punto)\n",
+    "# model.associationRules.show(truncate=False)\n",
+    "\n",
+    "spark.stop()\n"
    ]
   },
   {
