--- a/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
+++ b/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
@@ -1343,6 +1343,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af3e6f71",
+   "metadata": {},
+   "source": [
+    "Dans nos expériences, MLxtend est généralement la plus rapide, car il s’agit d’une implémentation optimisée d’Apriori en Python sur une seule machine.\n",
+    "Ma propre implémentation Fk-1 × Fk-1 est un peu plus lente mais suit la même tendance.\n",
+    "Spark MLlib (FP-Growth) est en général plus lent sur ces petits jeux de données, car le coût de démarrer Spark et de gérer l’infrastructure distribuée domine le temps de calcul.\n",
+    "En revanche, sur des jeux de données beaucoup plus volumineux ou réellement distribués, l’architecture de Spark devient plus avantageuse que les implémentations centralisées."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15ba5579",
    "metadata": {},
    "source": [
