--- a/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
+++ b/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d48392d3",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1289,7 @@
     "                            w_min=w_min, w_max=w_max, seed=10)\n",
     "           for n in n_list]\n",
     "\n",
-    "# Tu mejor implementación (Fk-1 × Fk-1)\n",
+    "#  (Fk-1 × Fk-1)\n",
     "series_my = benchmark_metodos(Tx_list, minsup=minsup, runs=3,\n",
     "                              methods=(\"Fk-1 x Fk-1\",),\n",
     "                              plot=False)[\"Fk-1 x Fk-1\"]\n",
@@ -1319,7 +1319,7 @@
     "                            w_min=w_min, w_max=w_max, seed=20)\n",
     "           for n in n_list]\n",
     "\n",
-    "# Tu método\n",
+    "# Notre méthode\n",
     "series_my = benchmark_metodos(Tx_list, minsup=minsup, runs=3,\n",
     "                              methods=(\"Fk-1 x Fk-1\",),\n",
     "                              plot=False)[\"Fk-1 x Fk-1\"]\n",
@@ -1347,7 +1347,7 @@
    "metadata": {},
    "source": [
     "Dans nos expériences, MLxtend est généralement la plus rapide, car il s’agit d’une implémentation optimisée d’Apriori en Python sur une seule machine.\n",
-    "Ma propre implémentation Fk-1 × Fk-1 est un peu plus lente mais suit la même tendance.\n",
+    "Notre propre implémentation Fk-1 × Fk-1 est un peu plus lente mais suit la même tendance.\n",
     "Spark MLlib (FP-Growth) est en général plus lent sur ces petits jeux de données, car le coût de démarrer Spark et de gérer l’infrastructure distribuée domine le temps de calcul.\n",
     "En revanche, sur des jeux de données beaucoup plus volumineux ou réellement distribués, l’architecture de Spark devient plus avantageuse que les implémentations centralisées."
    ]
