--- a/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
+++ b/CHICA-Miller_TORRES-Jonathan_TD_Regles-Association.ipynb
@@ -1160,7 +1160,7 @@
    "metadata": {},
    "source": [
     "Les résultats obtenus avec MLxtend et Spark sont équivalents à ceux de mon implémentation, car tous appliquent le même principe : trouver les itemsets dont le support est ≥ minsup.\n",
-    "Même si Apriori (mon code et MLxtend) et FP-Growth (Spark) utilisent des algorithmes différents, ils analysent les mêmes transactions et calculent le même support.\n",
+    "Même si Apriori (notre code et MLxtend) et FP-Growth (Spark) utilisent des algorithmes différents, ils analysent les mêmes transactions et calculent le même support.\n",
     "Les petites variations d’ordre ou d’affichage ne changent rien : les itemsets fréquents sont exactement les mêmes."
    ]
   },
